--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   bot:
-    build: bot
+    build: .
     environment:
       BOT_TOKEN: "${BOT_TOKEN}"
       DB_FILE_NAME: "./data/bot.db"
