Disable privacy mode

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,5 @@
 {
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "typescript.tsdk": "node_modules\\typescript\\lib",
-  "editor.tabSize": 2,
-  "vscord.app.privacyMode.enable": true
+  "editor.tabSize": 2
 }
