--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     }
   },
   "dependencies": {
-    "@libsql/client": "^0.15.4",
+    "better-sqlite3": "^11.9.1",
     "camelcase-keys": "^9.1.3",
     "discord.js": "^14.18.0",
     "drizzle-orm": "^0.42.0",
@@ -40,6 +40,7 @@
     "@eslint/js": "^9.25.0",
     "@tsconfig/node23": "^23.0.1",
     "@tsconfig/strictest": "^2.0.5",
+    "@types/better-sqlite3": "^7.6.13",
     "@types/eslint-config-prettier": "^6.11.3",
     "@types/node": "^22.14.1",
     "drizzle-kit": "^0.31.0",
