--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     }
   },
   "dependencies": {
-    "better-sqlite3": "^11.9.0",
+    "better-sqlite3": "11.9.1",
     "camelcase-keys": "^9.1.3",
     "discord.js": "^14.19.3",
     "drizzle-orm": "^0.43.1",
