--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "engines": {
     "node": ">=24"
   },
-  "packageManager": "pnpm@10.14.0+sha512.ad27a79641b49c3e481a16a805baa71817a04bbe06a38d17e60e2eaee83f6a146c6a688125f5792e48dd5ba30e7da52a5cda4c3992b9ccf333f9ce223af84748",
+  "packageManager": "pnpm@10.18.0+sha512.e804f889f1cecc40d572db084eec3e4881739f8dec69c0ff10d2d1beff9a4e309383ba27b5b750059d7f4c149535b6cd0d2cb1ed3aeb739239a4284a68f40cfa",
   "devEngines": {
     "runtime": {
       "name": "node",
@@ -25,31 +25,31 @@
     }
   },
   "dependencies": {
-    "better-sqlite3": "12.2.0",
-    "camelcase-keys": "^9.1.3",
-    "discord.js": "^14.22.0",
-    "drizzle-orm": "^0.44.4",
-    "fluent-commands": "2.0.0-pre.2025-08-21.sha-eab3b62c",
-    "zod": "^4.0.17"
+    "better-sqlite3": "12.4.1",
+    "camelcase-keys": "^10.0.0",
+    "discord.js": "^14.22.1",
+    "disfluent": "^2.0.0",
+    "drizzle-orm": "^0.44.6",
+    "zod": "^4.1.11"
   },
   "optionalDependencies": {
     "bufferutil": "^4.0.9",
     "zlib-sync": "^0.1.10"
   },
   "devDependencies": {
-    "@eslint/js": "^9.33.0",
+    "@eslint/js": "^9.37.0",
     "@tsconfig/node24": "^24.0.1",
-    "@tsconfig/strictest": "^2.0.5",
+    "@tsconfig/strictest": "^2.0.6",
     "@types/better-sqlite3": "^7.6.13",
     "@types/eslint-config-prettier": "^6.11.3",
-    "@types/node": "^24.3.0",
-    "drizzle-kit": "^0.31.4",
-    "eslint": "^9.33.0",
+    "@types/node": "^24.6.2",
+    "drizzle-kit": "^0.31.5",
+    "eslint": "^9.37.0",
     "eslint-config-prettier": "^10.1.8",
     "prettier": "^3.6.2",
-    "prettier-plugin-organize-imports": "^4.2.0",
-    "typescript": "^5.9.2",
-    "typescript-eslint": "^8.40.0"
+    "prettier-plugin-organize-imports": "^4.3.0",
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.45.0"
   },
   "prettier": {
     "semi": false,
