Remove zlib-sync

--- a/package.json
+++ b/package.json
@@ -33,8 +33,7 @@
     "zod": "^4.1.12"
   },
   "optionalDependencies": {
-    "bufferutil": "^4.0.9",
-    "zlib-sync": "^0.1.10"
+    "bufferutil": "^4.0.9"
   },
   "devDependencies": {
     "@eslint/js": "^9.38.0",
